# TallyPy

./: .gitignore  ClosingBalance_Audit.md  GEMINI.md  LICENSE  README.md  Schedule3_Implementation.md  TallyStockVouchers.py  app1.py  escape_script.py  inject_bim.py  powerbi_import.py  requirements.txt  tally_all_vouchers.py  tally_ledgers.py  tally_stock_items.py  tally_stock_vouchers.py  tally_vouchers.py  tally_vouchers_odbc.py  tally_xml_exporter.py
qt_tally_exporter/: CMakeLists.txt  README.md  build_installer.bat  build_release.bat  deploy_release.bat
qt_tally_exporter/installer/: install.cmd
qt_tally_exporter/resources/: app.rc  resources.qrc
qt_tally_exporter/src/: MainWindow.cpp  MainWindow.h  TallyService.cpp  TallyService.h  main.cpp
